- Tighten styles on learn more page. 	- Fix gradients - they were too big and blotchy 	- make spacing better

--- a/app/styles/pages/_user-profile.scss
+++ b/app/styles/pages/_user-profile.scss
@@ -168,6 +168,8 @@ h3, h4 {
 .up-feature-list li {
   list-style-type: circle;
   font-family: $paragraph;
+  margin-left: 25px;
+  font-size: 20px;
 }
 
 // .template-container-2 {
